# open-meteo-warehouse

./: .env.example  .gitignore  README.md  docker-compose.yml
.github/workflows/: ci.yml
backend/: pyproject.toml
backend/src/: config.py  db.py  main.py  schemas.py
backend/tests/: test_endpoints.py
db/: 001_schema.sql  002_seed_dimensions.sql  003_indexes.sql
frontend/: index.html  style.css
frontend/src/: api.js  charts.js  filters.js  kpis.js  main.js
ingestion/: locations.json  pyproject.toml
ingestion/src/: cli.py  client.py  config.py  loader.py  pipeline.py  scheduler.py  transform.py
ingestion/tests/: test_transform.py
